deployment-redmine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: redmine
    spec:

      containers:
        - name: redmine
          image: redmine:4.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

          volumeMounts:
            - mountPath: /usr/src/redmine/files
              name: redmine-pv-storage
      volumes:
        - name: redmine-pv-storage
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
