service-redmine.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: redmine-service
  labels:
    app: redmine
spec:
  # Choose how to expose your service
  type: NodePort
  ports:
    # The port number to expose the service
    - port: 3000
  # Pod to route service traffic  
  selector:
    app: redmine
