ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
      - http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: redmine-service
                  port:
                    number: 3000
